force-app/main/default/objects/Account_Document__c/Account_Document__c.object-meta.xml
<CustomObject>
    <description>Junction object (many to many relationship) between Document Versions and Accounts. Associates an account to an electronic document.</description>
    <label>Account Document</label>
    <nameField>
        <label>Account Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>