force-app/main/default/objects/Account_Document__c/fields/Account_Contact__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the contact on the specified account.</description>
    <label>Account Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Documents</relationshipLabel>
    <relationshipName>Account_Documents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>