force-app/main/default/objects/Account_Document__c/fields/Account_Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Email_Address__c</fullName>
    <formula>Account_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Contact Email Address</label>
    <type>Text</type>
</CustomField>