force-app/main/default/objects/Account_Document__c/fields/Account_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Document_Name__c</fullName>
    <formula>Account__r.Name  + &quot; - &quot; +   RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Document Name Old</label>
    <type>Text</type>
</CustomField>