force-app/main/default/objects/Account_Document__c/fields/Date_Time_Document_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Document_Sent__c</fullName>
    <description>This field is automatically updated when the Send Document checkbox is checked.</description>
    <label>Date/Time Document Sent</label>
    <type>DateTime</type>
</CustomField>