force-app/main/default/objects/Account_Document__c/fields/Document_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Document_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is checked when the account has accepted the document electronically.</description>
    <label>Document Accepted</label>
    <type>Checkbox</type>
</CustomField>