force-app/main/default/objects/Account_Document__c/fields/Document_Accepted_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Accepted_Contact_Name__c</fullName>
    <description>The name of the person at the Account who accepted the document electronically.</description>
    <label>Document Accepted Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>