force-app/main/default/objects/Account_Document__c/fields/Document_Accepted_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Document_Accepted_IP_Address__c</fullName>
    <description>The IP address from where the electronic document was accepted (signed).</description>
    <label>Document Accepted IP Address</label>
    <length>20</length>
    <type>Text</type>
</CustomField>