force-app/main/default/objects/Account_Document__c/fields/Document_Accpeted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Document_Accpeted_Date_Time__c</fullName>
    <description>The date/time that the document was electronically accepted (signed).</description>
    <label>Document Accepted Date/Time</label>
    <type>DateTime</type>
</CustomField>