force-app/main/default/objects/Account_Document__c/fields/Document_Version__c.field-meta.xml
<CustomField>
    <fullName>Document_Version__c</fullName>
    <description>Link to an account&apos;s electronic document.</description>
    <label>Document Version</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Document_Version__c.Current_Active_Version__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Document_Version__c</referenceTo>
    <relationshipLabel>Account Documents</relationshipLabel>
    <relationshipName>Account_Documents</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>