force-app/main/default/objects/Account_Document__c/fields/Document_Version_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Version_Name__c</fullName>
    <formula>Document_Version__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Version Name</label>
    <type>Text</type>
</CustomField>