force-app/main/default/objects/Account_Document__c/fields/Document_Version_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Version_Record_Type__c</fullName>
    <formula>Document_Version__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Version Record Type</label>
    <type>Text</type>
</CustomField>