force-app/main/default/objects/Account_Document__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dealer Agreement</fullName>
            </value>
            <value>
                <fullName>National Accounts Participation Agreement</fullName>
            </value>
            <value>
                <fullName>Price List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>