force-app/main/default/objects/Account_Document__c/fields/Send_Document__c.field-meta.xml
<CustomField>
    <fullName>Send_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that triggers the workflow to update Date/Time Document Sent and sends email to account contact with the document to &quot;sign&quot;.</description>
    <inlineHelpText>Check this box to send the electronic document to the account to be accepted.</inlineHelpText>
    <label>Send Document</label>
    <type>Checkbox</type>
</CustomField>