force-app/main/default/objects/Account_Document__c/recordTypes/National_Accounts_Participation_Agreement.recordType-meta.xml
<RecordType>
    <fullName>National_Accounts_Participation_Agreement</fullName>
    <active>true</active>
    <label>NA Participation Agreement</label>
</RecordType>