force-app/main/default/objects/Account_Document__c/validationRules/Contact_Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Email_Validation</fullName>
    <active>true</active>
    <description>Validate that there is an email address if Send is selected</description>
    <errorConditionFormula>AND( Send_Document__c  = True,
     ISBLANK(Account_Contact_Email_Address__c))</errorConditionFormula>
    <errorDisplayField>Account_Contact__c</errorDisplayField>
    <errorMessage>To send the document, the contact must have an email address.</errorMessage>
</ValidationRule>